[gd_scene load_steps=10 format=2]

[ext_resource path="res://Image_Imports/attack maybe work.png" type="Texture" id=1]
[ext_resource path="res://Image_Imports/moving pls work.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Minotaur.gd" type="Script" id=3]
[ext_resource path="res://Image_Imports/dead right.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 19.5 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("../attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../attack/Area2D/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 31, -10, 36, -2, 29, 5, 16, 4, 7, 4, 11, 11, 8, 17, -15, 17, -19, 6, -18, -12, -8, -26, 11, -26, 15, -20, 15, -8 ), PoolVector2Array( 36, -11, 40, -2, 30, 3, 16, 4, 9, 5, 11, 11, 12, 16, 8, 17, -15, 17, -19, 6, -18, -12, -8, -26, 11, -26, 15, -20, 15, -8 ), PoolVector2Array( 36, -12, 40, -2, 30, 3, 16, 4, 9, 5, 12, 12, 14, 16, 8, 17, -15, 16, -17, 6, -16, -12, -8, -26, 11, -26, 15, -20, 17, -8 ), PoolVector2Array( 34, -6, 36, -3, 30, 3, 15, 10, 14, 16, 8, 17, -34, 16, -35, 8, -29, 1, -18, 1, -17, -16, -15, -23, -8, -26, 11, -26, 15, -20, 16, 1 ), PoolVector2Array( 7, 12, 2, 17, -23, 15, -39, 13, -45, 9, -45, 5, -29, 1, -22, 0, -18, 1, -22, -7, -19, -20, -17, -25, -8, -26, 3, -21, 6, -12, 7, 1 ), PoolVector2Array( 35, 22, 19, 22, 10, 17, -23, 15, -29, 7, -22, 0, -14, -4, -11, -16, -6, -21, -4, -23, 16, -25, 27, -2, 48, 8, 48, 17 ), PoolVector2Array( 35, 22, 19, 22, 11, 16, -8, 17, -7, 5, -11, -16, -6, -21, -4, -23, 5, -26, 21, -24, 24, -7, 20, 5, 39, 12, 38, 17 ), PoolVector2Array( 35, 22, 19, 22, 11, 16, -8, 17, -7, 5, -11, -16, -6, -21, -4, -23, 5, -26, 21, -24, 24, -7, 21, 4, 41, 12, 38, 17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "Swalk"
tracks/0/type = "value"
tracks/0/path = NodePath("../movement:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 14 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.5, -3.5 )
shape = SubResource( 1 )

[node name="dead" type="Sprite" parent="."]
position = Vector2( 0, 4 )
texture = ExtResource( 4 )
flip_h = true
hframes = 6

[node name="movement" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( -3, 0 )
flip_h = true
hframes = 8

[node name="Area2D" type="Area2D" parent="movement"]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="movement/Area2D"]
polygon = PoolVector2Array( 14, -15, 4, -22, -13, -22, -19, -12, -20, -5, -32, -7, -37, 4, -26, 11, -15, 12, -13, 20, 16, 20, 24, 9, 24, -6, 14, -15, 14, -15 )

[node name="attack" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 1 )
hframes = 9

[node name="Area2D" type="Area2D" parent="attack"]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="attack/Area2D"]
polygon = PoolVector2Array( 31, -10, 36, -2, 29, 5, 16, 4, 7, 4, 11, 11, 8, 17, -15, 17, -19, 6, -18, -12, -8, -26, 11, -26, 15, -20, 15, -8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../dead")
anims/Attack = SubResource( 2 )
anims/Swalk = SubResource( 3 )
anims/dead = SubResource( 4 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 39, 0 )
enabled = true
collision_mask = 8

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
position = Vector2( 1, 6 )
shape = SubResource( 5 )

[connection signal="body_entered" from="movement/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="attack/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
